src/test/resources/templates/valid/test.kool
object Program {
  def main () : Unit = {
    if(new Main().run()) println("");
  }
}

class Main {

	def run(): Bool = {
		var foo: Foo[List, String];
		return false;
	}
}

class Foo[T, U] {
	var foo: T[U];
}

class List[T] {}