src/test/resources/templates/invalid/new-primitive.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test<Int>());
  }
}

class Test<T> {
	
	Def test(): T = {
		return new T();
	}
}

    